--- a/vine-boom_autoplay.html
+++ b/vine-boom_autoplay.html
@@ -3,7 +3,7 @@
     <title>Vine Boom SFX</title>
   </head>
   <body>
-     <audio controls autoplay>
+     <audio autoplay>
   <source src="https://www.myinstants.com/media/sounds/vine-boom.mp3" type="audio/mpeg">
   Your browser does not support the audio element.
     </audio>
