--- a/vine-boom_autoplay.html
+++ b/vine-boom_autoplay.html
@@ -3,10 +3,13 @@
     <title>Vine Boom SFX</title>
   </head>
   <body>
-     <audio autoplay>
+     <audio autoplay id="sfx">
   <source src="https://www.myinstants.com/media/sounds/vine-boom.mp3" type="audio/mpeg">
   Your browser does not support the audio element.
     </audio>
+    <script>
+      document.write(navigator.getAutoplayPolicy("sfx"));
+    </script>
     <h3>credit for myinstants for the sound effect</h3>
   </body>
 </html>
