--- a/vine-boom_autoplay.html
+++ b/vine-boom_autoplay.html
@@ -8,7 +8,7 @@
   Your browser does not support the audio element.
     </audio>
     <script>
-      document.write(navigator.getAutoplayPolicy("sfx"));
+      document.getElementById("ap_text").innerHTML = navigator.getAutoplayPolicy("sfx");
     </script>
     <h3>credit for myinstants for the sound effect</h3>
   </body>
