--- a/vine-boom_autoplay.html
+++ b/vine-boom_autoplay.html
@@ -7,9 +7,10 @@
   <source src="https://www.myinstants.com/media/sounds/vine-boom.mp3" type="audio/mpeg">
   Your browser does not support the audio element.
     </audio>
+    <h3>credit for myinstants for the sound effect</h3>
+    <h3 id="ap_text"></h3>
     <script>
       document.getElementById("ap_text").innerHTML = navigator.getAutoplayPolicy("sfx");
     </script>
-    <h3>credit for myinstants for the sound effect</h3>
   </body>
 </html>
