--- a/vine-boom_autoplay.html
+++ b/vine-boom_autoplay.html
@@ -8,7 +8,7 @@
   Your browser does not support the audio element.
     </audio>
     <h3>credit for myinstants for the sound effect</h3>
-    <h3 id="ap_text"></h3>
+    <h3 id="ap_text">loading</h3>
     <script>
       document.getElementById("ap_text").innerHTML = navigator.getAutoplayPolicy("sfx");
     </script>
