--- a/vine-boom_autoplay.html
+++ b/vine-boom_autoplay.html
@@ -10,7 +10,7 @@
     <h3>credit for myinstants for the sound effect</h3>
     <h3 id="ap_text">loading</h3>
     <script>
-      document.getElementById("ap_text").innerHTML = navigator.getAutoplayPolicy("sfx");
+      document.getElementById("ap_text").innerHTML = "test";
     </script>
   </body>
 </html>
